--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 </section>
 <section class="slide">
 	<div>
+		<h2 class="shout">Ted</h2>
+	</div>
+</section>
+<section class="slide">
+	<div>
+		<h2 class="shout">Ideas worth spreading</h2>
+	</div>
+</section>
+<section class="slide">
+	<div>
 		<h2>Немного о себе</h2>
 		<div style="display: flex">
 			<div style="flex-shrink: 1"><img style="padding-right: 20px" src="pictures/64lMqg7R6g4.jpg" alt=""/></div>
@@ -56,6 +66,75 @@ padding-left:40px;"
 				   href="http://habrahabr.ru/users/mavrin/">Хабр (http://habrahabr.ru/users/mavrin/)</a><br></div>
 		</div>
 	</div>
+</section>
+<section class="slide">
+	make
+</section>
+<section class="slide">
+	GRUNT
+</section>
+<section class="slide">
+	GULP
+</section>
+<section class="slide">
+	NPM script
+</section>
+<section class="slide">
+	Снова gulp
+</section>
+<section class="slide">
+	POSTcss
+</section>
+<section class="slide">
+	rework
+</section>
+<section class="slide">
+	twitter discuss
+</section>
+<section class="slide">
+	parser with detail
+</section>
+<section class="slide">
+	parser like babel
+</section>
+<section class="slide">
+	it just visitor
+</section>
+<section class="slide">
+	tauCharts plugins
+</section>
+<section>
+	smalltalk v8
+</section>
+<section class="slide">
+	Redux
+</section>
+<section class="slide">
+	ELM
+</section>
+<section class="slide">
+	CQRS
+</section>
+<section class="slide">
+	Event Sourcing
+</section>
+<section class="slide">
+	Cyclejs
+</section>
+<section class="slide">
+	Reactive programming
+</section>
+<section class="slide">
+	Angular
+</section>
+<section class="slide">
+	React, polymer
+</section>
+<section class="slide">
+	Html
+</section>
+<section class="slide">
+	Form
 </section>
 <section class="slide">
 	<h2 class="shout">Вопросы?</h2>
