--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@ padding-left:40px;"
 <section class="slide">
 	Event Sourcing
 </section>
+<section>
+	saga
+</section>
 <section class="slide">
 	Cyclejs
 </section>
