--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ padding-left:40px;"
 <section class="slide">
 	tauCharts plugins
 </section>
-<section>
+<section class="slide">
 	smalltalk v8
 </section>
 <section class="slide">
@@ -118,7 +118,7 @@ padding-left:40px;"
 <section class="slide">
 	Event Sourcing
 </section>
-<section>
+<section class="slide">
 	saga
 </section>
 <section class="slide">
