--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@ padding-left:40px;"
 	tauCharts plugins
 </section>
 <section class="slide">
+	css modules
+</section>
+<section class="slide">
+	js in css
+</section>
+<section class="slide">
 	smalltalk v8
 </section>
 <section class="slide">
@@ -138,6 +144,9 @@ padding-left:40px;"
 </section>
 <section class="slide">
 	Form
+</section>
+<section class="slide">
+	Basisjs
 </section>
 <section class="slide">
 	<h2 class="shout">Вопросы?</h2>
