--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@ padding-left:40px;"
 	Reactive programming
 </section>
 <section class="slide">
+	meteor
+</section>
+<section class="slide">
+	isomorphic js
+</section>
+<section class="slide">
 	Angular
 </section>
 <section class="slide">
