--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
 		<h2 class="shout"><a target="_blank" href="https://goo.gl/TCtmLl">goo.gl/TCtmLl</a></h2>
 	</div>
 </section>
-<section class="slide">
-	<div>
-		<h2 class="shout">Ted</h2>
-	</div>
+<section style="background: black" class="slide">
+		<img class="cover" width="75%" src="pictures/TED_logo%20(1).png" alt="TED">
 </section>
 <section class="slide">
 	<div>
@@ -67,20 +65,190 @@ padding-left:40px;"
 		</div>
 	</div>
 </section>
-<section class="slide">
-	make
+<section style="padding: 50px" class="slide">
+	<pre>
+		<code style="height: 600px;line-height: 1.2;font-size: 16px" class="bash">
+#!/bin/bash
+# Copyright (c) 2003-2016, CKSource - Frederico Knabben. All rights reserved.
+# For licensing, see LICENSE.md or http://ckeditor.com/license
+
+# Build CKEditor using the default settings (and build.js).
+
+set -e
+
+echo "CKBuilder - Builds a release version of ckeditor-dev."
+echo ""
+
+CKBUILDER_VERSION="2.3.0"
+CKBUILDER_URL="http://download.cksource.com/CKBuilder/$CKBUILDER_VERSION/ckbuilder.jar"
+
+PROGNAME=$(basename $0)
+MSG_UPDATE_FAILED="Warning: The attempt to update ckbuilder.jar failed. The existing file will be used."
+MSG_DOWNLOAD_FAILED="It was not possible to download ckbuilder.jar."
+ARGS=" $@ "
+
+function error_exit
+{
+	echo "${PROGNAME}: ${1:-"Unknown Error"}" 1>&2
+	exit 1
+}
+
+function command_exists
+{
+	command -v "$1" > /dev/null 2>&1;
+}
+
+# Move to the script directory.
+cd $(dirname $0)
+
+# Download/update ckbuilder.jar.
+mkdir -p ckbuilder/$CKBUILDER_VERSION
+cd ckbuilder/$CKBUILDER_VERSION
+if [ -f ckbuilder.jar ]; then
+	echo "Checking/Updating CKBuilder..."
+	if command_exists curl ; then
+	curl -O -R -z ckbuilder.jar $CKBUILDER_URL || echo "$MSG_UPDATE_FAILED"
+	else
+	wget -N $CKBUILDER_URL || echo "$MSG_UPDATE_FAILED"
+	fi
+else
+	echo "Downloading CKBuilder..."
+	if command_exists curl ; then
+	curl -O -R $CKBUILDER_URL || error_exit "$MSG_DOWNLOAD_FAILED"
+	else
+	wget -N $CKBUILDER_URL || error_exit "$MSG_DOWNLOAD_FAILED"
+	fi
+fi
+cd ../..
+
+# Run the builder.
+echo ""
+echo "Starting CKBuilder..."
+
+JAVA_ARGS=${ARGS// -t / } # Remove -t from args.
+
+VERSION="4.5.9 DEV"
+REVISION=$(git rev-parse --verify --short HEAD)
+SEMVER_REGEX="^([0-9]+)\.([0-9]+)\.([0-9]+)(\-[0-9A-Za-z-]+)?(\+[0-9A-Za-z-]+)?$"
+
+# Get version number from tag (if available and follows semantic versioning principles).
+# Use 2>/dev/null to block "fatal: no tag exactly matches", true is needed because of "set -e".
+TAG=$(git symbolic-ref -q --short HEAD || git describe --tags --exact-match 2>/dev/null) || true
+# "Git Bash" does not support regular expressions.
+if echo $TAG | grep -E "$SEMVER_REGEX" > /dev/null
+then
+	echo "Setting version to $TAG"
+	VERSION=$TAG
+fi
+
+java -jar ckbuilder/$CKBUILDER_VERSION/ckbuilder.jar --build ../../ release $JAVA_ARGS --version="$VERSION" --revision="$REVISION" --overwrite
+
+# Copy and build tests.
+if [[ "$ARGS" == *\ \-t\ * ]]; then
+	echo ""
+	echo "Copying tests..."
+
+	cp -r ../../tests release/ckeditor/tests
+	cp -r ../../package.json release/ckeditor/package.json
+	cp -r ../../bender.js release/ckeditor/bender.js
+
+	echo ""
+	echo "Installing tests..."
+
+	(cd release/ckeditor &&	npm install && bender init)
+fi
+
+echo ""
+echo "Release created in the \"release\" directory."
+		</code>
+	</pre>
+</section>
+
+<section style="padding: 50px" class="slide">
+	<pre>
+		<code style="font-size: 18px;line-height: 1.2" class="javascript">
+/* jshint node: true */
+
+'use strict';
+
+const gulp = require( 'gulp' );
+
+const config = {
+	ROOT_DIR: '.',
+	BUILD_DIR: 'build',
+	WORKSPACE_DIR: '..',
+
+	// Files ignored by jshint and jscs tasks. Files from .
+	//		gitignore will be added automatically during tasks execution.
+	IGNORED_FILES: [
+		'src/lib/**'
+	]
+};
+
+require( './dev/tasks/build/tasks' )( config );
+require( './dev/tasks/dev/tasks' )( config );
+require( './dev/tasks/lint/tasks' )( config );
+require( './dev/tasks/docs/tasks' )( config );
+
+gulp.task( 'default', [ 'build' ] );
+gulp.task( 'pre-commit', [ 'lint-staged' ] );
+		</code>
+	</pre>
+</section>
+<section style="padding: 50px" class="slide">
+	<pre >
+		<code style="font-size: 18px;line-height: 1.2" class="javascript">
+module.exports = function(grunt) {
+
+  grunt.initConfig({
+    jshint: {
+      files: ['Gruntfile.js', 'src/**/*.js', 'test/**/*.js'],
+      options: {
+        globals: {
+          jQuery: true
+        }
+      }
+    },
+    watch: {
+      files: ['<%= jshint.files %>'],
+      tasks: ['jshint']
+    }
+  });
+
+  grunt.loadNpmTasks('grunt-contrib-jshint');
+  grunt.loadNpmTasks('grunt-contrib-watch');
+
+  grunt.registerTask('default', ['jshint']);
+
+};
+		</code>
+	</pre>
+</section>
+<section  class="slide">
+	<pre>
+		<code style="line-height: 1.2;overflow: hidden" class="json">
+{
+...
+"scripts": {
+    "pretest": "npm run lint && npm run beautify-lint",
+    "test": "mocha --harmony --full-trace --check-leaks",
+    "travis": "npm run cover -- --report lcovonly",
+    "lint": "eslint lib bin hot",
+    "beautify-lint": "beautify-lint lib/**.js hot/**.js bin/**.js benchmark/*.js test/*.js",
+    "beautify": "beautify-rewrite lib/**.js hot/**.js bin/**.js benchmark/*.js test/*.js",
+    "postcover": "npm run lint && npm run beautify-lint",
+    "cover": "istanbul cover -x *.runtime.js node_modules/mocha/bin/_mocha",
+    "publish-patch": "npm run lint && npm run beautify-lint && mocha && npm version patch && git push && git push --tags && npm publish"
+  }
+}
+		</code>
+	</pre>
 </section>
 <section class="slide">
-	GRUNT
-</section>
-<section class="slide">
-	GULP
-</section>
-<section class="slide">
-	NPM script
-</section>
-<section class="slide">
-	Снова gulp
+	<div class="cover">
+		<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Day 1: Wow, NPM scripts are so much simpler.<br><br>Day 2: Moving them into their own js file for readability.<br><br>Day 3: I&#39;ve reinvented Gulp.</p>&mdash; Jake Archibald (@jaffathecake) <a href="https://twitter.com/jaffathecake/status/700320306053935104">February 18, 2016</a></blockquote>
+		<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</div>
 </section>
 <section class="slide">
 	POSTcss
@@ -110,7 +278,9 @@ padding-left:40px;"
 	js in css
 </section>
 <section class="slide">
-	smalltalk v8
+	http://bibliography.selflanguage.org/_static/implementation.pdf
+	https://developers.google.com/v8/design
+	v8
 </section>
 <section class="slide">
 	Redux
