--- a/index.html
+++ b/index.html
@@ -418,13 +418,13 @@ element.innerHTML = '&lt;div class="' + styles.className + '"&gt;';
 	js in css
 </section>-->
 <section class="slide">
-	<img class="shout"  src="pictures/turt.jpg" alt="">
+	<img class="shout" src="pictures/turt.jpg" alt="">
 </section>
 <section class="slide">
 	<h2 class="shout">V8</h2>
 </section>
 <section class="slide">
-	<h2 >Fast Property Access</h2>
+	<h2>Fast Property Access</h2>
 	<img src="pictures/map_trans_c.png" alt="">
 </section>
 <section class="slide">
@@ -435,28 +435,46 @@ element.innerHTML = '&lt;div class="' + styles.className + '"&gt;';
 </section>
 <section>
 	<ul>
-		<li ><a href="http://bibliography.selflanguage.org/_static/implementation.pdf">An Efficient Implementation of Self, a Dynamically-Typed Object-Oriented Language Based on Prototypes</a></li>
-		<li class="next"><a href="http://dl.acm.org/citation.cfm?id=800017.800542">Efficient implementation of the smalltalk-80 system</a></li>
+		<li><a href="https://developers.google.com/v8/design">Design Elements</a></li>
+		<li class="next"><a href="http://bibliography.selflanguage.org/_static/implementation.pdf">An Efficient
+			Implementation of Self, a Dynamically-Typed Object-Oriented Language Based on Prototypes</a></li>
+		<li class="next"><a href="http://dl.acm.org/citation.cfm?id=800017.800542">Efficient implementation of the
+			smalltalk-80 system</a></li>
 	</ul>
 </section>
 <section class="slide">
-	Redux
+	<h2 class="shout"><a href="http://redux.js.org/">Redux</a></h2>
 </section>
 <section class="slide">
-	ELM
+	<img class="cover" src="pictures/redux-article-3-03.svg" alt="">
 </section>
 <section class="slide">
-	CQRS
+	<h2>
+		Идеи Redux
+	</h2>
+	<ul>
+		<li class="next"><a href="http://elm-lang.org/">elm</a></li>
+		<li class="next"><a href="http://martinfowler.com/bliki/CQRS.html">Command Query Responsibility Segregation
+			(CQRS)</a></li>
+		<li class="next"><a href="http://martinfowler.com/eaaDev/EventSourcing.html">Event Sourcing</a></li>
+	</ul>
 </section>
-<section class="slide">
-	Event Sourcing
+<section style="background: black" class="slide">
+	<img style="width: 150px;left:100px" class="cover" src="pictures/cyclejs_logo.svg" alt="">
+	<h2 style="position: absolute;
+    top: 50%;
+    left: 450px;
+    z-index: -1;
+    color: white;
+    font-size: 120px;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    max-width: 100%;
+    max-height: 100%;">Cycle.js</h2>
 </section>
-<section class="slide">
+<!--<section class="slide">
 	saga
-</section>
-<section class="slide">
-	Cyclejs
-</section>
+</section>-->
 <section class="slide">
 	Reactive programming
 </section>
