--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </header>
 <section class="slide">
 	<div>
-		<h2 class="shout"><a target="_blank" href="https://goo.gl/TCtmLl">goo.gl/TCtmLl</a></h2>
+		<h2 class="shout"><a target="_blank" href="https://goo.gl/ePTKan">goo.gl/ePTKan</a></h2>
 	</div>
 </section>
 <section style="background: black" class="slide">
