--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<p><a target="_blank" href="https://twitter.com/krivlenia">Константин Кривленя</a></p>
 
-	<p>Компания <a target="_blank" href="https://goo.gl/nFaFyV">Targetprocess</a></p>
+	<p>Компания <a target="_blank" href="https://goo.gl/Wrm5CU">Targetprocess</a></p>
 </header>
 <section class="slide">
 	<img class="cover" src="pictures/imgpsh_fullsize.jpg" alt="">
@@ -62,7 +62,7 @@
 		<div style="display: flex">
 			<div style="flex-shrink: 1"><img style="padding-right: 20px" src="pictures/64lMqg7R6g4.jpg" alt=""/></div>
 			<div style="flex-shrink: 2">Зовут меня Константин Кривленя. <br/>Разработчик в <a
-					href="http://crew.taucraft.com/">Taucraft</a>.<br/>
+						href="https://goo.gl/Wrm5CU">Targetprocess</a>.<br/>
 				Помогаю опенсорсной JavaScript-библиотеки чартов <a href="http://taucharts.com/">Taucharts</a>. <br/>
 				<a
 						style="background:url(pictures/twitter-bird-light-bgs.png) no-repeat;padding-left:40px;"
