--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<p>Компания <a target="_blank" href="https://goo.gl/Wrm5CU">Targetprocess</a></p>
 </header>
 <section class="slide">
-	
+	<img class="cover" src="https://avatars3.githubusercontent.com/u/14080747?v=3&s=460">
 	<h2 ><a target="_blank" style="position: absolute;
     bottom: 110px;
     right: 235px;
